Added all the assets

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Flex image demo
+<!DOCTYPE html>
+<html lang="en-AU">
+<head>
+<meta charset="utf-8" />
+
+<title>Flex Image - Demo</title>
+
+<link href="style.css" rel="stylesheet" type="text/css" media="screen" />
+
+</head>
+<body>
+
+
+<div id="wrapper">
+
+	<div class="intro">
+		<h1>Responsive spritesheets with Sass and Compass</h1>
+		<h3>By Zee Zali</h3>
+		<p>Resize the browser to see it action.</p>
+	</div>
+	
+	
+	<div class="col one">
+		<h2>Element</h2>
+		<div class="elem">Hide this text</div>
+	</div>
+
+	<div class="col two">
+		<h2>Sprite</h2>
+		<div class="sprite">Sprite</div>
+	</div>
+
+</div>
+
+
+</body>
+</html>
